init: Always mount proc before user's init program
Android's linker64 assumes /proc/self/exe.  Mount /proc before
user's init program so that all programs can be dynamically
linked and loaded by linker64.

Note this commit does not change configuration - changes will
be made in separate commits.

Change-Id: I77c59d7998d139a77c97335cc4c3b7edd5008a9e
Signed-off-by: Cheng Gu <gucheng@google.com>
Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -2298,6 +2298,14 @@ config ASN1
 
 source "kernel/Kconfig.locks"
 
+config PROCFS_MOUNT
+	bool "Ask kernel to mount /proc before user init program"
+	default n
+	help
+	  Some program loaders assume the existence of /proc file system.
+	  Use this option to ask kernel to mount /proc before the very first
+	  user init program.
+
 config ARCH_HAS_NON_OVERLAPPING_ADDRESS_SPACE
 	bool
 
