arm64: dts: mnh: Disable large 368 MiB memory carveout
We're not actually using this kernel to drive the IPU (at least for
now), so let's unlock all of the memory for general-purpose use.

There is now 497 MiB of usable memory after this change.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/arch/arm64/boot/dts/intel/mnh-base.dtsi
+++ b/arch/arm64/boot/dts/intel/mnh-base.dtsi
@@ -62,6 +62,7 @@
 		ranges;
 
 		carveout_reserved: carveout_heap@4E800000 {
+			status = "disabled";
 			compatible = "ion-region";
 			reg = <0x0 0x49000000 0x0 0x17000000>;
 		};
