--- a/arch/arm64/configs/mnh_defconfig
+++ b/arch/arm64/configs/mnh_defconfig
@@ -511,13 +511,10 @@ CONFIG_CC_HAS_STACKPROTECTOR_NONE=y
 # CONFIG_STACKPROTECTOR is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 # CONFIG_SHADOW_CALL_STACK is not set
-CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-# CONFIG_THINLTO is not set
-# CONFIG_LTO_NONE is not set
-CONFIG_LTO_CLANG=y
-# CONFIG_CFI_CLANG is not set
+CONFIG_LTO_NONE=y
+# CONFIG_LTO_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
