mnh_defconfig: Enable System V IPC and POSIX message queues
We're going to run Alpine Linux, so let's enable these IPC mechanisms
commonly used by standard Linux tools.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/arch/arm64/configs/mnh_defconfig
+++ b/arch/arm64/configs/mnh_defconfig
@@ -26,8 +26,10 @@ CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
 CONFIG_DEFAULT_HOSTNAME="easel"
-# CONFIG_SYSVIPC is not set
-# CONFIG_POSIX_MQUEUE is not set
+CONFIG_SYSVIPC=y
+CONFIG_SYSVIPC_SYSCTL=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
 # CONFIG_WATCH_QUEUE is not set
 # CONFIG_CROSS_MEMORY_ATTACH is not set
 # CONFIG_USELIB is not set
@@ -407,6 +409,8 @@ CONFIG_RELOCATABLE=y
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # end of Boot options
+
+CONFIG_SYSVIPC_COMPAT=y
 
 #
 # Power management options
