arm64: dts: mnh: Update ramdisk address
We've updated the boot memory layout on the AP kernel, so let's update
the Easel kernel to match.

Our new boot memory layout is:
  0x40000000-0x401FFFFF: BL-31 SBL (2 MiB)
  0x40200000-0x411FFFFF: kernel (16 MiB)
  0x41200000-0x4120FFFF: FDT (64 KiB)
  0x41210000-          : ramdisk (up to 494 MiB)

The kernel is now loaded at a 2 MiB-aligned address as required by
Linux, which fixes the following warning during boot:

[    0.000000] [Firmware Bug]: Kernel image misaligned at boot, please fix your bootloader!

This allows us to disable CONFIG_RELOCATABLE and save some precious
space, since the kernel no longer needs to fix itself by relocating at
boot.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/arch/arm64/boot/dts/intel/mnh.dts
+++ b/arch/arm64/boot/dts/intel/mnh.dts
@@ -23,8 +23,8 @@
 
 	chosen {
 		bootargs = "clocksource=apb_clocksource swiotlb=4096 console=ttyS0,115200n8 earlycon=uart8250,mmio32,0x04049000";
-		linux,initrd-start = <0x40890040>;
-		linux,initrd-end = <0x41C90000>;
+		linux,initrd-start = <0x41210040>;
+		linux,initrd-end = <0x42610000>;
 		stdout-path = "serial0:115200n8";
 		emulation = <0x00000000>;
 		wafer_upper = <0x00000000>;
