--- a/arch/arm64/configs/mnh_defconfig
+++ b/arch/arm64/configs/mnh_defconfig
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 5.8.0-rc4 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="Proton clang version 11.0.0 (https://github.com/llvm/llvm-project f804bd586ee58199db4cfb2da8e9ef067425900b)"
+CONFIG_CC_VERSION_TEXT="Proton clang version 11.0.0 (https://github.com/llvm/llvm-project 6792069a3fdb412d06dd3cc42a6181c6fb7db860)"
 CONFIG_GCC_VERSION=0
 CONFIG_LD_VERSION=0
 CONFIG_CC_IS_CLANG=y
@@ -400,7 +400,7 @@ CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI=y
 
 # CONFIG_ARM64_SVE is not set
 # CONFIG_ARM64_PSEUDO_NMI is not set
-CONFIG_RELOCATABLE=y
+# CONFIG_RELOCATABLE is not set
 # CONFIG_RANDOMIZE_BASE is not set
 # end of Kernel Features
 
@@ -548,8 +548,6 @@ CONFIG_HAVE_ARCH_COMPILER_H=y
 CONFIG_HAVE_ARCH_PREL32_RELOCATIONS=y
 CONFIG_ARCH_USE_MEMREMAP_PROT=y
 # CONFIG_LOCK_EVENT_COUNTS is not set
-CONFIG_ARCH_HAS_RELR=y
-CONFIG_RELR=y
 
 #
 # GCOV-based kernel profiling
