--- a/arch/arm64/boot/dts/intel/mnh-base.dtsi
+++ b/arch/arm64/boot/dts/intel/mnh-base.dtsi
@@ -53,7 +53,7 @@
 
 	memory@40000000 {
 		device_type = "memory";
-		reg = <0x00000000 0x40080000 0x0 0x1FF80000>;
+		reg = <0x00000000 0x40080000 0x0 0x1ff80000>;
 	};
 
 	reserved-memory {
@@ -61,16 +61,16 @@
 		#size-cells = <2>;
 		ranges;
 
-		carveout_reserved: carveout_heap@4E800000 {
+		carveout_reserved: carveout_heap@4e800000 {
 			status = "disabled";
 			compatible = "ion-region";
 			reg = <0x0 0x49000000 0x0 0x17000000>;
 		};
 	};
 
-	paintbox@0400C000 {
+	paintbox@0400c000 {
 		compatible = "uio_pdrv_genirq", "google,paintbox";
-		reg = <0x0 0x0400C000 0x0 0xFFFF>;
+		reg = <0x0 0x0400c000 0x0 0xffff>;
 		interrupts = <GIC_SPI 1 IRQ_TYPE_LEVEL_HIGH>;
 		hardware-id = <0x0 0x6>;
 		status = "okay";
@@ -99,42 +99,42 @@
 
 	mipi_tx0: mipidevice@04010000 {
 		compatible = "snps,mipicsi_device";
-		reg = <0x0 0x04010000 0x0 0xFFF>;
+		reg = <0x0 0x04010000 0x0 0xfff>;
 		interrupts = <GIC_SPI 2 IRQ_TYPE_LEVEL_HIGH>;
 		device-id = "TX0";
 	};
 
 	mipi_tx1: mipidevice@04011000 {
 		compatible = "snps,mipicsi_device";
-		reg = <0x0 0x04011000 0x0 0xFFF>;
+		reg = <0x0 0x04011000 0x0 0xfff>;
                 interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>;
 		device-id = "TX1";
 	};
 
 	mipi_rx0: mipihost@04012000 {
 		compatible = "snps,mipicsi_host";
-		reg = <0x0 0x04012000 0x0 0xFFF>;
+		reg = <0x0 0x04012000 0x0 0xfff>;
 		interrupts = <GIC_SPI 4 IRQ_TYPE_LEVEL_HIGH>;
 		device-id = "RX0";
 	};
 
 	mipi_rx1: mipihost@04013000 {
 		compatible = "snps,mipicsi_host";
-		reg = <0x0 0x04013000 0x0 0xFFF>;
+		reg = <0x0 0x04013000 0x0 0xfff>;
 		interrupts = <GIC_SPI 5 IRQ_TYPE_LEVEL_HIGH>;
 		device-id = "RX1";
 	};
 
 	mipi_rx2: mipihost@04014000 {
 		compatible = "snps,mipicsi_host";
-		reg = <0x0 0x04014000 0x0 0xFFF>;
+		reg = <0x0 0x04014000 0x0 0xfff>;
 		interrupts = <GIC_SPI 6 IRQ_TYPE_LEVEL_HIGH>;
 		device-id = "RX2";
 	};
 
 	mipitop: mipitop@04015000 {
 		compatible = "intel,mipicsi_top";
-		reg = <0x0 0x04015000 0x0 0x0FFF>;
+		reg = <0x0 0x04015000 0x0 0x0fff>;
 		interrupts = <GIC_SPI 7 IRQ_TYPE_LEVEL_HIGH>;
 		device-id = "TOP";
 	};
@@ -248,9 +248,9 @@
 		ri-override;
 	};
 
-	perfmon@0404C000 {
+	perfmon@0404c000 {
 		compatible = "intel, perf_mon";
-		reg = <0x0 0x0404C000 0x0 0x1000>,
+		reg = <0x0 0x0404c000 0x0 0x1000>,
 			  <0x0 0x04003000 0x0 0x1000>;
 		interrupts = <GIC_SPI 12 IRQ_TYPE_LEVEL_HIGH>;
 	};
@@ -272,10 +272,10 @@
 		refclk-gpio = <0x1f3>;
 	};
 
-	pcie@041C2000 {
+	pcie@041c2000 {
 		compatible = "snps, dw_pcie_ep";
 		reg = <0x0 0x00200000 0x0 0x2000>,
-			  <0x0 0x040C0000 0x0 0x1000>,
+			  <0x0 0x040c0000 0x0 0x1000>,
 			  <0x0 0x80000000 0x0 0x80000000>,
 			  <0x0 0x04003000 0x0 0x1000>;
 		interrupts = <GIC_SPI 25 IRQ_TYPE_LEVEL_HIGH>,
